2008-05-08  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
	
	* libavogadro/src/extensions/forcefieldextension.cpp: Added a
	QMessageBox::information() box to display the energy when the user
	clicks "Calculate Energy". (#1947745)

2008-05-08  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/extensions/forcefieldextension.cpp: Move call to
	SetLogFile (fixes #1960307)

2008-05-07  Marcus D. Hanwell  <marcus@cryos.org>

	* * CMakeLists.txt, libavogadro/src/CMakeLists.txt,
	libavogadro/src/extensions/CMakeLists.txt: Optionally use CMake 2.6
	and the much improved FindBoost to check for and use Boost Python on
	more than just Linux - works great on the Mac.

2008-05-07  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/extensions/forcefielddialog.*: Removed gradients
	option. Now handled OBForceField::HasAnalyticalGradients()

	* libavogadro/src/extensions/conformersearchdialog.*: Same.

	* libavogadro/src/extensions/forcefieldextension.*: Same.

	* libavogadro/src/extensions/constraintsdialog.*: Update for static
	constraints. We now only need to set it once.

	* libavogadro/src/tools/autoopttool.*: Replaced convergence spin box
	by steps per update spin box.

2008-05-05  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/orbitalextension.*: Set the navigate tool
	as the active tool after loading a file.

2008-05-04  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/drawtool.cpp: Added saving of the current
	element to the draw tool.

	* libavogadro/src/tools/autoopttool.cpp: Add checks in for whether the
	force field was initialised correctly.

	* libavogadro/src/engines/orbitalengine.*: More updates to the orbital
	engine to improve rendering consistency.

	* libavogadro/src/extensions/orbitalextension.cpp: Fixed another
	crasher - when no basis set has been loaded.

2008-05-03  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/orbitalextension.cpp: Corrected the MO